@@ -41,11 +41,11 @@ include $(APPDIR)/Make.defs
 
 APPNAME		= c3b
 PRIORITY	= SCHED_PRIORITY_DEFAULT
-STACKSIZE	= 2048
+STACKSIZE	= 660
 
 APPNAME1	= shell
 PRIORITY1	= SCHED_PRIORITY_DEFAULT
-STACKSIZE1	= 2048
+STACKSIZE1	= 980
 
 # Hello, World! Example
 
