@@ -59,7 +59,7 @@
 #endif
 
 #ifndef CONFIG_EXAMPLES_TELNETD_DAEMONSTACKSIZE
-#  define CONFIG_EXAMPLES_TELNETD_DAEMONSTACKSIZE 768
+#  define CONFIG_EXAMPLES_TELNETD_DAEMONSTACKSIZE 580
 #endif
 
 #ifndef CONFIG_EXAMPLES_TELNETD_CLIENTPRIO
@@ -69,6 +69,8 @@
 #ifndef CONFIG_EXAMPLES_TELNETD_CLIENTSTACKSIZE
 #  define CONFIG_EXAMPLES_TELNETD_CLIENTSTACKSIZE 990
 #endif
+
+#undef CONFIG_EXAMPLE_CC3000_MEM_CHECK
 
 /* Other definitions ********************************************************/
 
